--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ version = 0.01
 
 [@GRS]
 -remove=PodCoverageTests
+-remove=ReadmeMarkdownFromPod
 [MetaResourcesFromGit]
 homepage        = https://tasks.celogeek.com/projects/perl-modules-dbix-class-mutable
 bugtracker.web  = https://github.com/celogeek/dbix-class-mutable/issues
